top banner added

--- a/index.html
+++ b/index.html
@@ -1,13 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <titl>azadi portfolio</title>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    
+    <section class="top-banner">
+        <div class="half-width">
+            <h1> welcome to</h1>
+            <h1><span class="orange-color">azadi emon</span>world</h1>
+            <h3>build clumbig and train stoper</h3>
+        </div>
+        <p>gain the race anyway insallah,stop thinking do working.life is a journey enjoy it anyhow.</p>
+        <a class="link-button" target="_blank" href="https://www.instagram.com/azadiemon/">HIRE ME</a>
+        <div class="half-width">
+            <img src="images/my-bg2.png" alt="">
+        </div>
+    </section>
 </body>
+
 </html>
