--- a/index.html
+++ b/index.html
@@ -25,6 +25,18 @@
             <img src="images/my-bg2.png" alt="">
         </div>
     </section>
+    <section class="dream-big">
+        <div class="half-width">
+            <img src="images/jhankar2.png" alt="">
+        </div>
+        <div class="half-width">
+            <h1> dream big</h1>
+            <h3>become a web developer</h3>
+            <p>dream big with something else form get together etc etcetec</p>
+            <a class="link-button" target="_blank" href="">download resume</a>
+        </div>
+
+    </section>
 </body>
 
 </html>
