--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <section class="top-banner">
+    <section class="top-banner flexible-container">
         <div class="half-width">
             <h1> welcome to</h1>
             <h1><span class="orange-color">azadi emon</span>world</h1>
@@ -25,17 +25,34 @@
             <img src="images/my-bg2.png" alt="">
         </div>
     </section>
-    <section class="dream-big">
-        <div class="half-width">
-            <img src="images/jhankar2.png" alt="">
-        </div>
-        <div class="half-width">
-            <h1> dream big</h1>
-            <h3>become a web developer</h3>
-            <p>dream big with something else form get together etc etcetec</p>
-            <a class="link-button" target="_blank" href="">download resume</a>
-        </div>
+    <section class="dream-big flexible-container">
+        <div>
+            <div class="half-width">
+                <img src="images/jhankar2.png" alt="">
+            </div>
+            <div class="half-width">
+                <h1> dream big</h1>
+                <h3>become a web developer</h3>
+                <p>dream big with something else form get together etc etcetec</p>
+                <a class="link-button" target="_blank" href="">download resume</a>
+            </div>
 
+    </section>
+    <section class="express area">
+        <h1>experiences</h1>
+        <div id="full-stack-developer" class="flexible-container">
+            <div class="experiences-item">
+                <h1>full stack wweb developer</h1>
+                <h3 class="orange-color">2022-present pro level developer</h3>
+                <p>pro level developer me insallh</p>
+            </div>
+            <div id="baby-web-developer" class="experiences-item">
+                <img src="images/exp-bg.png" alt="">
+                <h1>baby web developer</h1>
+                <h3 class="orange-color">2022-2024 pro level developer </h3>
+                <p>ki lhikbo bujteci nah toh ar ki kivabe gap puron korbo k jane bacaw amare allah</p>
+            </div>
+        </div>
     </section>
 </body>
 
